--- a/app/globals.css
+++ b/app/globals.css
@@ -10,13 +10,14 @@
 
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  color: rgb(248 250 252);
+  background-color:rgb(17 24 39);
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
     position: relative;
     height: 100%;
     line-height: 1.6;
