--- a/app/globals.css
+++ b/app/globals.css
@@ -54,9 +54,21 @@ body {
   object-fit: cover;
 }
 
-/* swipe buttons */
-div.swiper-button-prev,
-div.swiper-button-next {
-  color: #002176;
+
+@keyframes flashAnimationUenig {
+  from { color: rgb(252 165 165); }
+  to { color: rgb(239 68 68); }
 }
 
+.flashUenig {
+  animation: flashAnimationUenig 0.5s;
+}
+
+@keyframes flashAnimationEnig {
+  from { color: rgb(34 197 94); }
+  to { color: rgb(22 163 74) }
+}
+
+.flashEnig {
+  animation: flashAnimationEnig 0.5s;
+}
